--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "react-data-table-component": "^7.5.2",
+    "react-data-table-component-extensions": "^1.6.0",
     "styled-components": "^5.3.5"
   }
 }
